Changes
-------

0.2.x (xx-xx-2017)
^^^^^^^^^^^^^^^^^^

* Added weakref support #56

* Allow to add gc support without implementing PyGCProtocol #57

* Refactor `PyErr` implementation. Drop `py` parameter from constructor.

* Added subclass support #64

* Added `self.__dict__` supoort #68


0.1.0 (07-23-2017)
^^^^^^^^^^^^^^^^^^

* Initial release