@@ -1,0 +1,23 @@
+// Copyright (c) 2017-present PyO3 Project and Contributors
+
+//! The PyO3 Prelude
+//!
+//! The purpose of this module is to alleviate imports of many common pyo3 traits
+//! by adding a glob import to the top of pyo3 heavy modules:
+//!
+//! ```
+//! # #![allow(unused_imports)]
+//! use pyo3::prelude::*;
+//! ```
+
+pub use super::py;
+pub use class::*;
+pub use objects::*;
+pub use objectprotocol::ObjectProtocol;
+pub use object::PyObject;
+pub use python::{Python, ToPyPointer, IntoPyPointer};
+pub use err::{PyErr, PyErrValue, PyResult, PyDowncastError, PyErrArguments};
+pub use pythonrun::GILGuard;
+pub use instance::{PyToken, PyObjectWithToken, AsPyRef, Py, PyNativeType};
+pub use conversion::{FromPyObject, RefFromPyObject, PyTryFrom, PyTryInto,
+                     ToPyObject, ToBorrowedObject, IntoPyObject, IntoPyTuple};
