@@ -14,6 +14,9 @@ Changes
 
 * Added `self.__dict__` supoort #68
 
+* Added `pyo3::prelude` module #70
+
+
 
 0.1.0 (07-23-2017)
 ^^^^^^^^^^^^^^^^^^
